--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "anotacoes",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "npm install && node index.js",
     "dev": "nodemon index.js",
